# X-Developper-Challenge-Search

./: .env.temp  README.md  package-lock.json  pyproject.toml  rank_tweets.py  recent_search_queries.json  requirements.txt  similarity_aggregate.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: app.py  groq.py  main.py  recent_search_queries.json  utils.py
backend/Notebook/: notebook.ipynb  recent_search_queries.json
backend/Twitter/: TwitterAPI.py  analyze.py  get_tweets_with_bearer_token.py.py  process_queries copy.py  process_queries.py  rank_tweets.py  recent_search.py  similarity_aggregate.py
data/: api.json  output.json  recent_search_queries.json  search.json
flask_service/: app.py  media_attachments.py
frontend/: package-lock.json  package.json
frontend/src/components/: FeedV2.tsx  Search.tsx
frontend/src/components/radix/: TabsV2.tsx
frontend/src/pages/search/: [slug].tsx
src/: TwitterAPI.py  get_tweets_with_bearer_token.py.py  get_usage_tweets.py  main.py  recent_search.py  recent_tweet_counts.py  search_spaces.py
src/Ranking/: rank_tweets.py
src/Twitter/: get_usage_tweets.py  liked_tweets.py  recent_tweet_counts.py
