[tool.poetry]
name = "x-developper-challenge-search"
version = "0.1.0"
description = ""
authors = ["github-actions <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
flask = {extras = ["async"], version = "^3.0.3"}
pinecone-client = "^3.2.2"
openai = "^1.23.2"
xai-sdk = "^0.0.4"
flask-cors = "^4.0.0"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
gensim = "^4.3.2"
scipy = "1.12"
asyncio = "^3.4.3"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
